fix(mobile): menu z-index 1003, settingbar fixed, scrollbars 40px always visible

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -43,7 +43,7 @@ body.modal-open {
   width: 100%;
   background-color: #67676759;
   box-shadow: 0 4px 5px gray;
-  z-index: 1000;
+  z-index: 1003;
   height: 50px;
   
   @media (max-width: 768px) {
