--- a/client/src/styles/toolbar.scss
+++ b/client/src/styles/toolbar.scss
@@ -9,7 +9,7 @@
   height: 50px;
   background-color: #67676759;
   box-shadow: 0 4px 5px gray;
-  z-index: 1001;
+  z-index: 1003;
   justify-content: flex-start;
   align-items: center;
   padding: 0 5px;
@@ -146,7 +146,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  position: absolute;
+  position: fixed;
   width: 100%;
   box-shadow: 0 4px 5px gray;
   top: 100px;
@@ -154,7 +154,7 @@
   padding: 10px 5px;
   color: #fff;
   font-size: 14px;
-  z-index: 1000;
+  z-index: 1002;
   min-height: 50px;
   
   @media (max-width: 768px) {
